book/tests/snapshots/snapshot__run_display_reference_prql@language-features__dates-and-times-3.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/dates-and-times-3.prql
---
from projects
derive first_check_in = start + 10days



