book/tests/snapshots/snapshot__run_display_reference_prql@language-features__dates_and_times-2.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/language-features/dates_and_times-2.prql
---
from commits
derive first_prql_commit = @2020-01-01T13:19:55-0800



