book/tests/snapshots/snapshot__run_display_reference_prql@language-features__distinct-1.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/distinct-1.prql
---
from employees
select department
group department (
  take 1
)



