book/tests/snapshots/snapshot__run_display_reference_prql@language-features__distinct-2.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/language-features/distinct-2.prql
---
from employees
group department (
  sort age
  take 1
)



