book/tests/snapshots/snapshot__run_display_reference_prql@language-features__null-0.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/language-features/null-0.prql
---
from employees
filter first_name == null
filter null != last_name



