book/tests/snapshots/snapshot__run_display_reference_prql@language-features__ranges-0.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/language-features/ranges-0.prql
---
from events
filter (
  date
  in @1776-07-04..@1787-09-17
)
filter (
  magnitude
  in 50..100
)



