book/tests/snapshots/snapshot__run_display_reference_prql@language-features__s-strings-0.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/language-features/s-strings-0.prql
---
from my_table
select db_version = s"version()"



